[b][color=orange]v4.15a[/color], 14.04.2019[/b][list]
[b]Fixed a lua error. >.>[/list]

[b][color=orange]v4.15[/color], 14.04.2019[/b][list]
[b]Added an Emoticon Frame to the chat.
[b]Fixed some lua errors if you use Dual Profiles.
[b]Added Target Name to the ElvUI Nameplate Castbars.
[b]Added a Talent Manager, where you can save different presets.
[b]Added back my chatBar. Disabled by default.
[b]Added Raid Progress Info to the Tooltip (hold shift).[/list]

[b][color=orange]v4.14[/color], 07.04.2019[/b][list]
[*]Prevent a lua error in Reminder Module.
[*]Alot of more Nameplate settings in my install.
[*]Update the appearance for my FlightPoints frame.
[*]Added Azerite Item Tooltip back.
[*]Minor tweaks to Unitframe install.
[*]Add Guildbest Frame on the LFG Frame > Mythic Keystones.
[*]Chinese Locals from Simon@ciki <3.[/list]

[b][color=orange]v4.13[/color], 12.03.2019[/b][list]
[*]Remove my own System DataText i use now the ElvUI Datatext.
[*]Removed Chat Menu, i never used it.
[*]Removed Chat Buttons.
[*]Adjust the Layout due to the new Voice Chat Buttons.
[*]Add new Nameplate settings to my Layout/CVar Install steps.
[*]Small UnitFrame settings update.[/list]

[b][color=orange]v4.12[/color], 25.02.2019[/b][list]
[*]Adjust my ActionBar appereance. Looks nice with my new Masque skin.
[*]Take account the the new ItemLevel Font changes.[/list]

[b][color=orange]v4.11[/color], 24.02.2019[/b][list]
[*]Forgot to change a tag in the Healer Layout.[/list]

[b][color=orange]v4.10[/color], 24.02.2019[/b][list]
[*]Changed the Armory Mode to work with the new Character Info from ElvUI.
[*]Many Skin updates.
[*]Added a MicroBar Tooltip.
[*]Added a Community Chat Hider. Credits Nnogga.
[*]Added NamePlate Scrolling Text.Credits Mpstark[/list]

[b][color=orange]v4.09[/color], 26.01.2019[/b][list]
[*]Dont load the AzeriteButtons if the ElvUI Character Skin is disabled.
[*]Add a waring texture for missing gems.
[*]Update ls_Toast skin and profile.[/list]
