@@ -1,3 +1,10 @@
+[b][color=orange]v4.16[/color], 19.04.2019[/b][list]
+[b]Rename the movers for AutoButtons.
+[b]Added Masque support for the AutoButtons.
+[b]Rename Bindingtext for AutoButtons.
+[b]Override ElvUI's min scale for Aura's.
+[b]Enable Crucible of the Storm in Progress.[/list]
+
 [b][color=orange]v4.15a[/color], 14.04.2019[/b][list]
 [b]Fixed a lua error. >.>[/list]
 
